--- a/.env
+++ b/.env
@@ -1,5 +1,3 @@
-GOOGLE_API_KEY = "AIzaSyAEezurOxJEOkzbbdgPpPUXZvZADfrZoZU"
-YOUTUBE_API_KEY = "AIzaSyDlNvVQM9ncao83FOODSaiq2WHq0RRXS04" 
-SERPER_API_KEY = "d7e29bdcf53a096d5a268cbee35b6001dcbfce0a"
-EMAIL_ADDRESS = "adarshprvt@gmail.com"
-EMAIL_PASSWORD = "Adarsh@1970"
+GOOGLE_API_KEY = "********************************"
+YOUTUBE_API_KEY = "******************************" 
+SERPER_API_KEY = "******************************"
